--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "build": "webpack"
+    "build": "webpack",
+    "push-page": "git subtree push --prefix dist origin gh-pages"
   },
   "keywords": [],
   "author": "",
